# lagrange-sim

./: .gitignore  CMakeLists.txt  README.md  matplotlibrc
analysis/: body-movements-comparator.py  body-movements.py  body-orbits.py  common.py  timestep-comparator.py  trajectory_plot.py
doc/elaborat/: elaborat.tex
src/: input-args-parser.cpp  input-args-parser.hpp  lagrange-sim.cpp  lagrange-sim.hpp  phys-constants.h  rg4-sim.hpp  rk4-sim.hpp  sim-writer.hpp
src/execs/: lagrange-rings.cpp  lagrange-span.cpp  lagrange-stability.cpp  satellite.cpp  stability-l12.cpp
